--- a/android-pdf-viewer/build.gradle
+++ b/android-pdf-viewer/build.gradle
@@ -1,17 +1,17 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 34
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 29
+        minSdkVersion 17
+        targetSdkVersion 34
         versionCode 1
-        versionName "3.2.0-beta.1"
+        versionName "3.2.0-beta.2"
     }
 }
 
 dependencies {
-    implementation 'androidx.core:core:1.3.1'
-    api 'com.github.TalbotGooday:PdfiumAndroid:1.0.1'
+    implementation 'androidx.core:core:1.12.0'
+    compileOnly files('libs/PdfiumAndroid-1.0.1.aar')
 }
